Updated with the latest libraryt code