@@ -1,5 +1,5 @@
 /*
- *  Copyright 2006-2018 WebPKI.org (http://webpki.org).
+ *  Copyright 2006-2020 WebPKI.org (http://webpki.org).
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -15,6 +15,8 @@
  *
  */
 package org.webpki.json;
+
+import java.lang.reflect.InvocationTargetException;
 
 import java.io.IOException;
 import java.io.Serializable;
@@ -84,7 +86,7 @@ public class JSONCryptoHelper implements Serializable {
     public static final String Y_JSON                  = "y";              // JWK
     
     
-    static final LinkedHashSet<String> jefReservedWords = new LinkedHashSet<String>();
+    static final LinkedHashSet<String> jefReservedWords = new LinkedHashSet<>();
 
     static {
         jefReservedWords.add(ALGORITHM_JSON);
@@ -101,7 +103,7 @@ public class JSONCryptoHelper implements Serializable {
         jefReservedWords.add(TAG_JSON);
     }
 
-    static final LinkedHashSet<String> jsfReservedWords = new LinkedHashSet<String>();
+    static final LinkedHashSet<String> jsfReservedWords = new LinkedHashSet<>();
 
     static {
         jsfReservedWords.add(ALGORITHM_JSON);
@@ -137,22 +139,21 @@ public class JSONCryptoHelper implements Serializable {
     public static class ExtensionHolder {
         
         LinkedHashMap<String,ExtensionEntry> extensions = 
-                new LinkedHashMap<String,ExtensionEntry>();
+                new LinkedHashMap<>();
 
         public ExtensionHolder addExtension(Class<? extends Extension> extensionClass,
                                             boolean mandatory) throws IOException {
             try {
-                Extension extension = extensionClass.newInstance();
+                Extension extension = extensionClass.getDeclaredConstructor().newInstance();
                 ExtensionEntry extensionEntry = new ExtensionEntry();
                 extensionEntry.extensionClass = extensionClass;
                 extensionEntry.mandatory = mandatory;
                 if ((extensions.put(extension.getExtensionUri(), extensionEntry)) != null) {
                     throw new IOException("Duplicate extension: " + extension.getExtensionUri());
                 }
-            } catch (InstantiationException e) {
-                throw new IOException(e);
-            } catch (IllegalAccessException e) {
-                throw new IOException(e);
+            } catch (InstantiationException | InvocationTargetException | 
+                     NoSuchMethodException | IllegalAccessException e) {
+                throw new IOException (e);
             }
             return this;
         }
@@ -170,8 +171,7 @@ public class JSONCryptoHelper implements Serializable {
 
     /**
      * Public key parameter to Options
-     * <br>KEY_ID_XOR_PUBLIC_KEY One or the other<br>
-     * KEY_ID_OR_PUBLIC_KEY At least of<br>
+     * 
      */
     public enum PUBLIC_KEY_OPTIONS {
         /**
@@ -180,22 +180,22 @@ public class JSONCryptoHelper implements Serializable {
         PLAIN_ENCRYPTION      (),
 
         /**
-         * key encryption but no public key or certificate path
+         * Key encryption but no public key or certificate path
          */
         FORBIDDEN             (), 
 
         /**
-         * key encryption with public key
+         * Key encryption with public key
          */
         REQUIRED              (), 
 
         /**
-         * key encryption with optional public key
+         * Key encryption with optional public key
          */
         OPTIONAL              (), 
 
         /**
-         * key encryption with at least a public key or a key id
+         * Key encryption with at least a public key or a key id
          */
         KEY_ID_OR_PUBLIC_KEY  (),
 
@@ -205,7 +205,7 @@ public class JSONCryptoHelper implements Serializable {
         KEY_ID_XOR_PUBLIC_KEY (),
 
         /**
-         * key encryption with a certificate path
+         * Key encryption with a certificate path
          */
         CERTIFICATE_PATH      ();
         
@@ -248,7 +248,6 @@ public class JSONCryptoHelper implements Serializable {
      * <li>keyId option.  Default: OPTIONAL</li>
      * <li>Permitted extensions.  Default: none</li>
      * </ul>
-     * In addition, the Options class is used for defining external readers for &quot;remoteKey&quot; support.
      *
      */
     public static class Options {
@@ -349,12 +348,11 @@ public class JSONCryptoHelper implements Serializable {
                     if (innerObject.hasProperty(name)) {
                         try {
                             JSONCryptoHelper.Extension extension = 
-                                    extensionEntry.extensionClass.newInstance();
+                                    extensionEntry.extensionClass.getDeclaredConstructor().newInstance();
                             extension.decode(innerObject);
                             extensions.put(name, extension);
-                        } catch (InstantiationException e) {
-                            throw new IOException (e);
-                        } catch (IllegalAccessException e) {
+                        } catch (InstantiationException | InvocationTargetException | 
+                                 NoSuchMethodException | IllegalAccessException e) {
                             throw new IOException (e);
                         }
                     }
@@ -394,7 +392,7 @@ public class JSONCryptoHelper implements Serializable {
     }
 
     static LinkedHashSet<String> createSet(String[] listOfNames) throws IOException {
-        LinkedHashSet<String> set = new LinkedHashSet<String>();
+        LinkedHashSet<String> set = new LinkedHashSet<>();
         for (String name : listOfNames) {
             if (!set.add(name)) {
                throw new IOException("Duplicate: \"" + name + "\""); 
